--- a/code/style.css
+++ b/code/style.css
@@ -236,10 +236,16 @@
       margin: 10px;
     }
 
-    header a {
+    .links {
+      margin-left: auto;
+    }
+
+    a {
       color: #89507f;
       text-decoration-line: none;
+      padding: 10px;
     }
+
 
   /*** All images ***/
     img {
