--- a/code/style.css
+++ b/code/style.css
@@ -4,21 +4,14 @@ html {
 }
 
 body {
-  font-family: 'Source Sans Pro', serif;
+  font-family: 'Lato', serif;
   margin: 0;
 }
 
 h1 {
+  font-size: 36px;
   color: white;
   font-family: 'Lato', sans-serif;
-}
-
-p {
-  color: black;
-}
-
-hr {
-  background: white;
 }
 
 /*** HEADER ***/
@@ -32,8 +25,18 @@ header {
   padding: 0 16px;
 }
 
-header img {
+.menu {
   width: 80px;
+}
+
+.logo {
+  height: 80px;
+  width: 240px;
+  background: url("./Images/logo_cupcake.jpg") no-repeat;
+}
+
+.logo:hover {
+  background: url("./Images/logo_cupcake_color.jpg") no-repeat;
 }
 
 nav {
@@ -50,6 +53,14 @@ nav div {
 nav a {
   color: blueviolet;
   text-decoration: none;
+  background: white;
+  border-radius: 25px;
+  padding: 10px;
+}
+
+nav a:hover {
+  background: rgb(88, 77, 247);
+  color: white;
 }
 
 /*** BIG NEWS ***/
@@ -69,6 +80,7 @@ nav a {
   flex-direction: column;
   background: white;
   border-radius: 5px;
+  max-width: 1100px;
 }
 
 .big-news p {
@@ -78,18 +90,47 @@ nav a {
 /*** SMALL NEWS ***/
 
 .small-news-container {
-  border: 2px solid black;
+  padding: 50px 20px;
   display: grid;
   grid-template-rows: auto;
   grid-template-columns: 1fr; 
   grid-gap: 20px 20px;
-
+  justify-items: center;
 }
 
 .small-news-container div {
-  width: 80px;
-  height: 80px;
-  background:red;
+  width: 80%;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid grey;
+  box-shadow: -5px 10px 10px #ff5e62;
+  border-radius: 5px;
+}
+
+.small-news-container div:hover {
+  background: #f9f1f1; /*#FAEBD7*/
+}
+
+.small-news-container div:hover img {
+  opacity: 0.8;
+}
+.small-news-container img {
+  width: 100%;
+  border-radius: 5px;
+}
+
+/*** FOOTER ***/
+
+footer {
+  height: 100px;
+  background: linear-gradient(to right, #ff9966, #ff5e62);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
 }
 
 /*** MEDIA QUERIES ***/
@@ -101,7 +142,7 @@ nav a {
   }
 
   nav {
-    width: 80%;
+    width: 100%;
     display: flex;
     justify-content: space-between;
   }
@@ -129,6 +170,13 @@ nav a {
     width: 50%;
     padding: 10px;
   }
+
+  /*** SMALL NEWS ***/
+
+  .small-news-container {
+    grid-template-columns: 1fr 1fr; 
+    grid-gap: 20px 5px;
+  }
 }
 
 @media (min-width: 1024px) {
@@ -138,12 +186,12 @@ nav a {
   }
 
   nav {
-    width: 60%;
+    width: 700px;
     justify-content: space-evenly;
   }
 
-  .logo {
-    position: static;
+  nav div {
+    width: 35%;
   }
 
   /*** BIG NEWS ***/
@@ -152,7 +200,11 @@ nav a {
     padding: 20px;
   }
 
-  
+  /*** SMALL NEWS ***/
+
+  .small-news-container {
+    grid-template-columns: 1fr 1fr 1fr 1fr; 
+  }
 
 }
 
