--- a/code/style.css
+++ b/code/style.css
@@ -96,6 +96,8 @@ html{
         }
     .article-card{
         max-width: 300px;
+        max-height: 650px;
+        overflow: hidden;
          }
     article{
         font-size: 20px;
@@ -151,7 +153,7 @@ html{
       max-width: 1080px;
     }  
     .article-card{
-          max-width: 200px;
+          max-width: 250px;
       }
     .big-news{
       flex-direction: row;
