--- a/code/style.css
+++ b/code/style.css
@@ -104,7 +104,6 @@ nav {
   display:none;
 }
  
-/*** article ***/
 
 
 /*** Section CARDS ***/
@@ -115,7 +114,6 @@ nav {
   height: 100% ;
   display: grid;
   grid-gap: 1rem;
-  
 }
 
 .card {
@@ -135,62 +133,7 @@ nav {
 .cards .article-one img {
   width: 100%;
   height: 100%;
-  
 }
-
-
-
-.card .fadedbox {
-  background-color: black;
-  position: absolute;
-  top: 0;
-  left: 0;
-  color: #fff;
-  -webkit-transition: all 300ms ease-out;
-  -moz-transition: all 300ms ease-out;
-  -o-transition: all 300ms ease-out;
-  -ms-transition: all 300ms ease-out;
-  transition: all 300ms ease-out;
-  opacity: 0;
-  width: 100%;
-  height: 25rem;
-  padding: 180px 5px;
-}
-.card:hover .fadedbox {
-  opacity: 0.8;
-}
-.card .text {
-  -webkit-transition: all 300ms ease-out;
-  -moz-transition: all 300ms ease-out;
-  -o-transition: all 300ms ease-out;
-  -ms-transition: all 300ms ease-out;
-  transition: all 300ms ease-out;
-  transform: translateY(30px);
-  -webkit-transform: translateY(30px);
-}
-.card .title {
-  font-size: 5px;
-  text-transform: uppercase;
-  opacity: 0;
-  transition-delay: 0.2s;
-  transition-duration: 0.3s;
-
-}
-.card:hover .title,
-.example:focus .title {
-  opacity: 1;
-  transform: translateY(0px);
-  -webkit-transform: translateY(0px);
-}
-
-button {
-  color:white;
-  border: inset black 2px;
-  background:transparent;
-  padding: 30px;
-  border-radius: 30%;
-}
-
 
 .cards a:link {
   text-decoration: none;
@@ -222,8 +165,60 @@ img {
   filter: grayscale(100%);
 }
 
+/*Fadebox over the card when hover */
+.card .fadedbox {
+  background-color: black;
+  position: absolute;
+  top: 0;
+  left: 0;
+  color: #fff;
+  -webkit-transition: all 300ms ease-out;
+  -moz-transition: all 300ms ease-out;
+  -o-transition: all 300ms ease-out;
+  -ms-transition: all 300ms ease-out;
+  transition: all 300ms ease-out;
+  opacity: 0;
+  width: 100%;
+  height: 25rem;
+  padding: 180px 5px;
+}
 
+.card:hover .fadedbox {
+  opacity: 0.8;
 
+}
+.card .text {
+  -webkit-transition: all 300ms ease-out;
+  -moz-transition: all 300ms ease-out;
+  -o-transition: all 300ms ease-out;
+  -ms-transition: all 300ms ease-out;
+  transition: all 300ms ease-out;
+  transform: translateY(30px);
+  -webkit-transform: translateY(30px);
+}
+
+.card .title {
+  font-size: 5px;
+  text-transform: uppercase;
+  opacity: 0;
+  transition-delay: 0.2s;
+  transition-duration: 0.3s;
+}
+
+.card:hover .title,
+.example:focus .title {
+  opacity: 1;
+  transform: translateY(0px);
+  -webkit-transform: translateY(0px);
+}
+
+button {
+  color:white;
+  border: inset black 2px;
+  background:transparent;
+  padding: 30px;
+  border-radius: 30%;
+}
 
 /*** FOOTER ***/
 
@@ -280,8 +275,6 @@ footer h5 {
    font-size:13px;
   }
 
-  
-
   .menu {
     height: 30px;
     width: 100%;
@@ -297,17 +290,14 @@ footer h5 {
     grid-template-columns: repeat(2, 1fr);
    }
 
-
-
    nav a:hover, nav a:active {
     text-decoration: underline;
   }
 
-
-
   nav a:hover, nav a:focus {
     color: grey;
   }
+
   footer {
     height: 100px;
   }
@@ -342,7 +332,7 @@ a {
 
 nav {
     display: inline-block;
-    
+
 }
 
 nav a {
@@ -351,7 +341,6 @@ nav a {
   text-decoration: none;
   margin-left: 26px;
 }
-
 
 .menu {
   height: 40px;
@@ -414,4 +403,5 @@ footer h2 {
 footer h5 {
   font-size: 20px;
 }
+
 }
