--- a/code/style.css
+++ b/code/style.css
@@ -1,189 +1,170 @@
-ody{
+body{
   background: #ffffff;
-  display: flex;
-  width: 100%;
-  height: 100%;
-  justify-content: center;
-  flex-direction: column;
+  color: #515151;
+  font-family: quicksand;
   margin: 0px;
 }
 
-a {
-  text-decoration: none;
-}
-
-/* NAVIGATION BAR */
-
-.navbar{
-  width: 100%;
-  height: 30px;
-  background-color: #ffffff;
-  position: fixed;
-  top: 0px;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.topnav {
-  background-color: white;
-  padding: 20px;
-}
-
-.topnav-right {
-  float: right;}
-.topnav a {
+h2 {
+  font-family: fredericka the great;
+  line-height: 32px;
+  font-size: 40px;
+  padding-right: 20px;
   color: #515151;
-  font-size: 16px;
-  font-family: quicksand; 
-  padding: 10px;
 }
 
-.topnav a:hover {
-  background-color: #f1f1f1;
-  color: #515151;
-  border-radius: 10%;
-}
-
-.navbar-logo{
-  width: 30px;
-  height: 30px;
-  margin-top: -5px;
-  margin-bottom: -10px;
-}
-
-/* HEADER */
-
-h1{
-  margin: 10px 120px 50px 50px;
-  color: #515151;
+p {
+  padding-right: 20px;
   font-size: 20px;
-  font-weight: normal;
+  color: #515151;
+}
+
+h3 {
+  font-size: 26px;
   font-family: baskerville;
 }
 
-p{
-  font-family: quicksand;
-  font-weight: normal;
-  color: #515151;
+h4 {
+  font-size: 32px;
+  font-weight: 100;
+  margin-top: -16px;
 }
+
+.container {
+  width: 100%;
+  max-width: 1400px;
+  margin: 0 auto;
+}
+
+a{
+  text-decoration: none;
+}
+
+/*** HEADER ***/
 
 header{
-  margin-top: 50px;
-  height: 500px;
+  background: #ffffff;
+  height: 80px;
   display: flex;
   align-items: center;
-  background-image: linear-gradient(#ffffff, #dddddd);
+  padding: 0px 16px;
 }
 
-.header-pic{
-  width: 600px;
-  height: 420px;
-  margin: 50px 0px 50px 50px;
+div.hamburger{
+  display: flex;
+  width: 30px;
+  height: 30px;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
-.main-article{
-  margin: 30px 100px 0px 50px;
-  font-size: 40px;
-  font-family: Fredericka the Great;
+.hamburger div{
+  width: 30px;
+  height: 5px;
+  background: #515151;
+  border-radius: 5px;
+}
+
+header img{
+  width: 40px;
+}
+
+nav {
+ display: none; 
+}
+
+nav a{
   color: #515151;
+  text-decoration: none;
+  margin-left: 16px;
 }
 
-/* CARDS */
+/*** MAIN ARTICLE SECTION ***/
 
-.instax-container{
+.main-article .container {
+  margin-left: 0px;
+  right: 0px;
+  padding: 20px 0px 50px 0px;
+  display: flex; 
+  flex-direction: column;
+  background-image: linear-gradient(#ffffff, #dddddd);
+}  
+
+.main-article img{
+  width: 90%;
+  margin-left: 5%;
+} 
+
+.main-article div {
+  text-align: center;
+  padding-left: 20px
+}
+
+/*** UP BUTTON ***/
+
+.myBtn {
+  display: flex; /* Hidden by default */
+  position: fixed; 
+  bottom: 20px; 
+  right: 30px; 
+  z-index: 99; 
+  border: none; 
+  background: #dddddd;
+  outline: none; 
+  color: #515151;  
+  padding: 15px; 
+  border-radius: 10px; 
+  font-size: 18px; 
+}
+
+
+/*** CARDS ***/
+
+.cards-container {
+  background-color: #ffffff;
+  color: #515151;
+  text-align: center;
+  padding-right: 24px;
+} 
+
+.cards {
+  height: 100%;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
   margin: 20px;
 }
 
-div.instax{
-  width: 20%;
-  background-color: white;
-  margin-bottom: 25px;
-  height: 350px;
-}
-
-div.instax:hover{
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
-
-.instax-pic{
+.cards a {
+  border: 2px solid #dddddd;
+  border-radius: 5px;
   width: 100%;
-}
- 
-div.container {
-  text-align: justify;
-  padding: 0px 10px;
-}
-
-/* SOCIAL MEDIA BOX */
-
-.icon-row{
- background-color: #f7f7f7;
- height: 200px;
- width: 100%;
- margin-bottom: 45px;
+  text-decoration: none;
+  color: #515151;
+  padding: 16px;
+  margin-bottom: 32px;
 }
 
-.social-menu ul{
-position: absolute;
-left: 50%;
-padding: 20px;
-margin-top: 8%;
-transform: translate(-50%,-50%);
-display: flex;
+
+.cards a img {
+  width: 90%;
 }
 
-.social-menu ul li {
-  list-style: none;
-  margin: 0px 15px;
+.title {
+  font-family: baskerville;
+  font-size: 28px;
+  display: flex;
+  justify-content: center;
+  margin: 5px 0px 10px 20px;
 }
 
-.social-menu ul li:nth-child(1) a:hover{
-  background-color: #3b5998;
+.description {
+  font-size: 15px;
+  padding: 10px 10px 1px 10px;
+  display: flex;
+  justify-content: center;
 }
 
-.social-menu ul li:nth-child(2) a:hover{
-  background-color: #55acee;
-}
-
-.social-menu ul li:nth-child(3) a:hover{
-  background-image: linear-gradient(#cc4588, #fed269);
-}
-
-.social-menu ul li:nth-child(4) a:hover{
-  background-color: #ff0000;
-}
-
-.social-menu ul li .fa {
-font-size: 30px;
-line-height: 60px;
-color: #000000;
-}
-
-.social-menu ul li .fa:hover{
-  color: #ffffff;
-}
-
-.social-menu ul li a {
-  display: block;
-  width: 60px;
-  height: 60px;
-  border-radius: 50%;
-  background-color: #ffffff;
-  text-align: center;
-  transition: .6s;
-  box-shadow: 0 5px 4px rgba(0,0,0,.5);
-}
-
-.social-menu ul li a:hover {
-  transform: translate(0,-10px);
-}
-
-/* FOOTER */
+/*** FOOTER ***/
 
 footer {
   padding: 20px;
@@ -196,4 +177,58 @@ footer a {
   color: #515151;
   font-family: quicksand;
   margin-bottom: 5px;
+}
+
+/*** MEDIA QUERIES ***/
+
+@media (min-width: 650px){  
+  header{
+    justify-content: space-between;
+  }
+
+  nav {
+   display: inline-block;
+  }
+
+  div.hamburger{
+  display: none;
+  }
+
+  .main-article div {
+   text-align: left;
+  }
+
+}
+
+@media (min-width: 700px){
+ .main-article .container {
+   flex-direction: row;
+   align-items: center;
+ }
+
+ .main-article img {
+   width: 50%;
+ }
+
+.cards a {
+  width: 40%;
+  flex-grow:1;
+  margin: 16px;
+}
+} 
+
+@media (min-width:1024px){
+  header{
+   justify-content: flex-start;
+  }
+
+  .cards a {
+    width: 15%;
+    flex-grow:1;
+    margin: 16px;
+  }
+
+  .cards a:hover {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  }
 }
