Align-self to .big-news img

--- a/code/style.css
+++ b/code/style.css
@@ -109,6 +109,7 @@ html{
           flex-direction: row;
         }
     .big-news img{
+        align-self: center;
         width: 60%;
       }
     .nav-links{
@@ -158,6 +159,7 @@ html{
       flex-direction: row;
     }
     .big-news img{
+      align-self: center;
       max-width: 700px;
     }
     p{
